[gd_scene load_steps=7 format=3 uid="uid://cp8pi02v5uf64"]

[ext_resource type="Script" path="res://Menus/skills_card.gd" id="1_ecjuy"]
[ext_resource type="Texture2D" uid="uid://ntnr4p0pi77u" path="res://icon.svg" id="2_cxgs0"]

[sub_resource type="Theme" id="Theme_bhf7c"]

[sub_resource type="Theme" id="Theme_8m0ml"]
default_font_size = 7

[sub_resource type="FontFile" id="FontFile_tfdu6"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="Theme" id="Theme_f3uxi"]
default_font_size = 5
/font_sizes/Smaller = 5
/fonts/small = SubResource("FontFile_tfdu6")

[node name="SkillsCard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_bhf7c")
script = ExtResource("1_ecjuy")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="IconContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="Control2" type="Control" parent="VBoxContainer/IconContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="icon" type="TextureRect" parent="VBoxContainer/IconContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
texture = ExtResource("2_cxgs0")
expand_mode = 2
stretch_mode = 5

[node name="Control" type="Control" parent="VBoxContainer/IconContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control2" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="TitleContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="Control2" type="Control" parent="VBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="title" type="RichTextLabel" parent="VBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0
theme = SubResource("Theme_8m0ml")
bbcode_enabled = true
text = "[center]test Title
[/center]"
autowrap_mode = 2

[node name="Control" type="Control" parent="VBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control4" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="DescriptionContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 15.0

[node name="Control2" type="Control" parent="VBoxContainer/DescriptionContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="description" type="RichTextLabel" parent="VBoxContainer/DescriptionContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0
theme = SubResource("Theme_f3uxi")
bbcode_enabled = true
text = "[center]test[/center]"
autowrap_mode = 2

[node name="Control" type="Control" parent="VBoxContainer/DescriptionContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control3" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
